{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 115,
  "lineage": "020a8f50-1634-4121-90ec-21a383efe72f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "django_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:637043415174:internet-gateway/igw-0fd7894d5c40e317d",
            "id": "igw-0fd7894d5c40e317d",
            "owner_id": "637043415174",
            "region": "ap-south-2",
            "tags": {
              "Name": "django_gw"
            },
            "tags_all": {
              "Name": "django_gw"
            },
            "vpc_id": "vpc-0db4c4e31db7f4fbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "django_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:637043415174:route-table/rtb-02eb1a2d4b522a00e",
            "id": "rtb-02eb1a2d4b522a00e",
            "owner_id": "637043415174",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd7894d5c40e317d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "django_route_table"
            },
            "tags_all": {
              "Name": "django_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db4c4e31db7f4fbe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637043415174",
            "id": "rtb-02eb1a2d4b522a00e",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_internet_gateway.django_gw",
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09822659a286e2c57",
            "region": "ap-south-2",
            "route_table_id": "rtb-02eb1a2d4b522a00e",
            "subnet_id": "subnet-090a7a6b633410827"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.django_gw",
            "aws_route_table.django_route_table",
            "aws_subnet.django_subnet_a",
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003bf5ddb0bd9b003",
            "region": "ap-south-2",
            "route_table_id": "rtb-02eb1a2d4b522a00e",
            "subnet_id": "subnet-0541210825ba18fdd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.django_gw",
            "aws_route_table.django_route_table",
            "aws_subnet.django_subnet_b",
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:637043415174:security-group/sg-0cc334e839d1a62dc",
            "description": "Allow inbound web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc334e839d1a62dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "106.222.202.138/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "637043415174",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_traffic"
            },
            "tags_all": {
              "Name": "allow_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db4c4e31db7f4fbe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637043415174",
            "id": "sg-0cc334e839d1a62dc",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "django_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:637043415174:subnet/subnet-090a7a6b633410827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a7a6b633410827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637043415174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "django_subnet_a"
            },
            "tags_all": {
              "Name": "django_subnet_a"
            },
            "vpc_id": "vpc-0db4c4e31db7f4fbe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637043415174",
            "id": "subnet-090a7a6b633410827",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "django_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:637043415174:subnet/subnet-0541210825ba18fdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0541210825ba18fdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637043415174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "django_subnet_b"
            },
            "tags_all": {
              "Name": "django_subnet_b"
            },
            "vpc_id": "vpc-0db4c4e31db7f4fbe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637043415174",
            "id": "subnet-0541210825ba18fdd",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "django_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:637043415174:vpc/vpc-0db4c4e31db7f4fbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0666439a1192cee6e",
            "default_route_table_id": "rtb-057fbad6191b18fd8",
            "default_security_group_id": "sg-0814da5f26faac95f",
            "dhcp_options_id": "dopt-08bb9aa1940c8f7d4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db4c4e31db7f4fbe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057fbad6191b18fd8",
            "owner_id": "637043415174",
            "region": "ap-south-2",
            "tags": {
              "Name": "django_vpc"
            },
            "tags_all": {
              "Name": "django_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637043415174",
            "id": "vpc-0db4c4e31db7f4fbe",
            "region": "ap-south-2"
          }
        }
      ]
    }
  ]
}